--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.2",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
+    "howler": "^2.2.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
